<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

    </data>
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".view.fragment.SearchingDialogFragment">
        <android.support.constraint.ConstraintLayout
                android:id="@+id/con_layout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dimen_10"
                android:paddingTop="@dimen/dimen_5"
                android:paddingRight="@dimen/dimen_10"
                android:paddingBottom="@dimen/dimen_20"
                android:background="@color/colorPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
            <ImageView
                    android:id="@+id/action_close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_close"
                    android:paddingTop="@dimen/dimen_5"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:contentDescription="@string/close_image"/>

            <TextView
                    android:id="@+id/where_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"
                    android:text="@string/where"
                    android:textColor="@color/blackColor"
                    android:textSize="@dimen/text_10"
                    android:layout_marginTop="@dimen/dimen_10"
                    app:layout_constraintTop_toBottomOf="@id/action_close"
                    app:layout_constraintStart_toStartOf="parent"/>
            <ImageView
                    android:id="@+id/location_icon"
                    android:layout_width="@dimen/dimen_20"
                    android:layout_height="@dimen/dimen_20"
                    android:layout_marginEnd="@dimen/dimen_5"
                    android:contentDescription="@null"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_location"
                    app:layout_constraintTop_toBottomOf="@id/where_tv"
                    app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                    android:id="@+id/action_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/enter_location"
                    android:textColor="@color/blackColor"
                    android:textSize="@dimen/text_12"
                    android:layout_marginStart="@dimen/dimen_25"
                    app:layout_constraintStart_toEndOf="@+id/location_icon"
                    app:layout_constraintTop_toTopOf="@+id/location_icon"
            />


            <View
                    android:id="@+id/view2"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_1"
                    android:layout_marginTop="@dimen/dimen_2"
                    android:layout_marginBottom="@dimen/dimen_10"
                    android:background="@color/blackColor"
                    app:layout_constraintTop_toBottomOf="@id/location_icon"/>


            <TextView
                    android:id="@+id/date_time_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"
                    android:text="@string/date_and_time"
                    android:textColor="@color/blackColor"
                    android:textSize="@dimen/text_10"
                    android:layout_marginTop="@dimen/dimen_10"
                    app:layout_constraintTop_toBottomOf="@id/view2"
                    app:layout_constraintStart_toStartOf="parent"/>


            <ImageView
                    android:id="@+id/calendar_icon"
                    android:layout_width="@dimen/dimen_20"
                    android:layout_height="@dimen/dimen_20"
                    android:layout_marginEnd="@dimen/dimen_5"
                    android:contentDescription="@null"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_location"
                    app:layout_constraintTop_toBottomOf="@id/date_time_tv"
                    app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                    android:id="@+id/action_calender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/enter_location"
                    android:textColor="@color/blackColor"
                    android:textSize="@dimen/text_12"
                    android:layout_marginStart="@dimen/dimen_25"
                    app:layout_constraintStart_toEndOf="@+id/calendar_icon"
                    app:layout_constraintTop_toTopOf="@+id/calendar_icon"/>


            <View
                    android:id="@+id/view3"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_1"
                    android:layout_marginTop="@dimen/dimen_2"
                    android:paddingBottom="@dimen/dimen_20"
                    android:background="@color/blackColor"
                    app:layout_constraintTop_toBottomOf="@id/action_calender"/>
        </android.support.constraint.ConstraintLayout>

        <android.support.v7.widget.AppCompatButton
                android:id="@+id/action_search"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:background="@color/blackColor"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:text="@string/action_search"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_14"
                app:layout_constraintTop_toBottomOf="@+id/con_layout1"/>


        <android.support.v7.widget.AppCompatButton
                android:id="@+id/action_book_now"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:background="@color/blackColor"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:text="@string/action_book_now"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_14"
                app:layout_constraintTop_toBottomOf="@+id/con_layout1"
                android:visibility="gone" />
        <View
                android:id="@+id/view4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black_transparent"
                app:layout_constraintTop_toBottomOf="@id/action_search"/>
    </android.support.constraint.ConstraintLayout>
</layout>