<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:clickable="true"
                android:background="@color/whiteColor"
                tools:context=".view.fragment.LoginFragment">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
        >

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_30"
                    android:orientation="vertical"
                    android:gravity="center">

                <ImageView
                        android:layout_width="@dimen/dimen_150"
                        android:layout_height="@dimen/dimen_150"
                        android:scaleType="fitXY"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/ic_circle_yellow"
                        android:contentDescription="@null"/>
            </LinearLayout>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/log_in"
                    android:textSize="20dp"
                    android:gravity="center"
                    android:layout_margin="@dimen/dimen_20"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:textColor="@color/blackColor"
            />

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
            >

                <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/dimen_5"
                        android:layout_marginBottom="@dimen/dimen_20"
                        android:layout_marginLeft="@dimen/dimen_30"
                        android:layout_marginRight="@dimen/dimen_30"
                        android:paddingLeft="@dimen/dimen_10"
                        android:paddingRight="@dimen/dimen_10"
                        android:elevation="@dimen/dimen_2"
                        app:cardCornerRadius="@dimen/dimen_2"
                >

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                        <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:orientation="horizontal"
                                android:padding="@dimen/dimen_2">

                            <!--<ImageView-->
                            <!--android:layout_width="@dimen/width_15"-->
                            <!--android:layout_height="@dimen/width_24"-->
                            <!--android:scaleType="fitXY"-->
                            <!--android:layout_marginTop="@dimen/margin_2"-->
                            <!--android:layout_marginRight="@dimen/margin_5"-->
                            <!--android:contentDescription="@null"/>-->

                            <android.support.design.widget.TextInputLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:padding="@dimen/dimen_2"
                                    android:theme="@style/TextLabel">

                                <android.support.v7.widget.AppCompatEditText
                                        android:id="@+id/email_id"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_margin="@dimen/dimen_5"
                                        android:background="@null"
                                        android:hint="@string/hint_email_id"
                                        android:inputType="textEmailAddress"
                                        android:padding="@dimen/dimen_8"
                                        android:textColor="@color/blackColor"/>

                            </android.support.design.widget.TextInputLayout>
                        </LinearLayout>

                        <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:orientation="horizontal"
                                android:padding="@dimen/dimen_2">

                            <!--<ImageView-->
                            <!--android:layout_width="@dimen/width_20"-->
                            <!--android:layout_height="@dimen/width_18"-->
                            <!--android:scaleType="fitXY"-->
                            <!--android:layout_marginTop="@dimen/margin_2"-->
                            <!--android:layout_marginRight="@dimen/margin_4"-->
                            <!--android:contentDescription="@null"/>-->
                            <android.support.design.widget.TextInputLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:padding="@dimen/dimen_2"
                                    android:theme="@style/TextLabel"
                                    app:passwordToggleEnabled="true"
                                    app:passwordToggleTint="@color/colorAccent">

                                <android.support.v7.widget.AppCompatEditText
                                        android:id="@+id/password"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_margin="@dimen/dimen_5"
                                        android:background="@null"
                                        android:hint="@string/hint_password"
                                        android:inputType="textPassword"
                                        android:padding="@dimen/dimen_8"
                                        android:textColor="@color/blackColor"/>

                            </android.support.design.widget.TextInputLayout>

                        </LinearLayout>

                        <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/action_choose_lang"
                                android:layout_gravity="left"
                                android:layout_margin="@dimen/dimen_5"
                                android:fontFamily="@font/poppins_regular"
                                android:padding="@dimen/dimen_8"
                                android:text="@string/choose_language"
                                android:textColor="@color/blackColor"/>

                        <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/action_forgot_password"
                                android:layout_gravity="left"
                                android:layout_margin="@dimen/dimen_5"
                                android:fontFamily="@font/poppins_regular"
                                android:padding="@dimen/dimen_8"
                                android:text="@string/forgot_password_ques"
                                android:textColor="@color/blackColor"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                        android:layout_width="@dimen/dimen_60"
                        android:layout_height="@dimen/dimen_50"
                        android:id="@+id/action_login"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="@dimen/dimen_20"
                        android:layout_marginRight="@dimen/dimen_15"
                        app:cardBackgroundColor="@color/colorPrimaryDark"
                        android:elevation="@dimen/dimen_2"
                        app:cardCornerRadius="@dimen/dimen_2"
                >

                    <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/ic_arrow_right"
                            android:padding="@dimen/dimen_10"
                            android:layout_gravity="center"
                            android:background="@color/colorPrimaryDark"
                    />
                </android.support.v7.widget.CardView>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
            android:id="@+id/new_registration_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/dimen_20"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:background="@color/grayColor">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_account"
                android:textColor="@color/blackColor"
                android:textAllCaps="true"
                android:fontFamily="@font/poppins_medium"
        />
    </LinearLayout>

</RelativeLayout>